--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,9 +30,10 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: just-the-docs
+remote-theme: just-the-docs
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 baseurl: /Horus-Technologies
 
 # Exclude from processing.
