--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-remote-theme: just-the-docs
+remote-theme: "just-the-dcos"/"just-the-docs"
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
