--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,11 +30,16 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-remote-theme: "just-the-docs"/"just-the-docs"
+remote-theme: just-the-docs
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
 baseurl: /Horus-Technologies
+
+url: https://just-the-docs.github.io
+
+aux_links:
+  Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
 # Exclude from processing.
 # The following items will not be processed, by default.
