--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -31,7 +31,7 @@ github_username:  jekyll
 
 # Build settings
 #theme: just-the-docs
-remote-theme: just-the-docs
+remote-theme: just-the-docs/just-the-docs
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
