--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,8 +32,8 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-# theme: just-the-docs
-remote-theme: just-the-docs/just-the-docs
+theme: just-the-docs
+# remote-theme: just-the-docs/just-the-docs
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
