--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Horus
+title: horus
 
 repository: Horus-Technologies/Horus-Technologies
 email: contact.horus.techl@gmail.com
